# glfw-game

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: fragment_shader.glsl  lighting_array_fragment_shader.glsl  lighting_array_vertex_shader.glsl  lighting_fragment_shader.glsl  lighting_vertex_shader.glsl  simple_fragment_shader.glsl  simple_vertex_shader.glsl  skybox_fragment_shader.glsl  skybox_vertex_shader.glsl  vertex_shader.glsl
src/: block.cpp  block.h  camera.cpp  camera.h  chunk.cpp  chunk.h  cubemapTexture.cpp  cubemapTexture.h  glad.c  glad.h  input.cpp  input.h  integer_vec3_hasher.cpp  integer_vec3_hasher.h  main.cpp  player.cpp  player.h  render.cpp  render.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h  textureArray.cpp  textureArray.h  textureCubemap.cpp  textureCubemap.h  triangle.cpp  triangle.h  util.cpp  util.h  vertex.cpp  vertex.h  world.cpp  world.h
test/: CMakeLists.txt
test/src/: test.cpp
